Space garbage game added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -177,7 +177,7 @@
                 android:id="@+id/button18"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="refresh"
+                android:onClick="startSpace"
                 android:text="@string/refresh" />
 
         </TableLayout>
